--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -166,6 +166,7 @@ jobs:
           echo "CWD: `pwd`"
           df -h
           system_profiler SPSoftwareDataType
+          system_profiler SPDeveloperToolsDataType
           sw_vers
           echo "    X-CODE: `xcodebuild -version | tr '\n' ';'`"
       # If we had docker ability, most of these would be built into a docker file
