more logigng cuz a problem on github actions i cannopt reporduce on my own container

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -146,6 +146,7 @@ jobs:
           path: |
             Builds/${{ matrix.config_name }}/PerformanceDump.txt
             IntermediateFiles/Debug/ThirdPartyComponents/curl/CONFIGURE-OUT.txt
+            IntermediateFiles/Debug/ThirdPartyComponents/curl/config.log
             /tmp/Trace*.txt
 
   build-n-test-MacOS:
