--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -174,8 +174,8 @@ endif
 ### --LGP 2024-03-15 - failing on github actions only
 LIBCURL_CONFIGURE += --without-zlib
 LIBCURL_CONFIGURE += --without-ssl
-LIBCURL_CONFIGURE += --without-brotli
-LIBCURL_CONFIGURE += --without-zstd  
+# LIBCURL_CONFIGURE += --without-brotli
+# LIBCURL_CONFIGURE += --without-zstd  
 
 
 ifeq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
