--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -145,8 +145,7 @@ jobs:
           if-no-files-found: warn
           path: |
             Builds/${{ matrix.config_name }}/PerformanceDump.txt
-            IntermediateFiles/Debug/ThirdPartyComponents/curl/CONFIGURE-OUT.txt
-            IntermediateFiles/Debug/ThirdPartyComponents/curl/config.log
+            IntermediateFiles/${{ matrix.config_name }}/ThirdPartyComponents/curl/CONFIGURE-OUT.txt
             /tmp/Trace*.txt
 
   build-n-test-MacOS:
