Again debugging issue with github actions and 22.04 and libcurl

--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -170,6 +170,14 @@ LIBCURL_CONFIGURE += --disable-curldebug
 endif
 
 
+## --LGP 2024-03-15 - failing on github actions only
+LIBCURL_CONFIGURE += --without-zlib
+LIBCURL_CONFIGURE += --without-ssl
+LIBCURL_CONFIGURE += --without-brotli
+LIBCURL_CONFIGURE += --without-brotli
+LIBCURL_CONFIGURE += --without-zstd  
+
+
 ifeq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
 # https://stroika.atlassian.net/browse/STK-759
 ### On M1 Mac (even if running under rosetta) - really just one mac tested - 
