--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -170,10 +170,9 @@ LIBCURL_CONFIGURE += --disable-curldebug
 endif
 
 
-## --LGP 2024-03-15 - failing on github actions only
-LIBCURL_CONFIGURE += --without-zlib
-LIBCURL_CONFIGURE += --without-ssl
-LIBCURL_CONFIGURE += --without-brotli
+## --LGP 2024-03-17 - failing on github actions only
+# LIBCURL_CONFIGURE += --without-zlib
+# LIBCURL_CONFIGURE += --without-ssl
 LIBCURL_CONFIGURE += --without-brotli
 LIBCURL_CONFIGURE += --without-zstd  
 
