Again debugging issue with github actions and 22.04 and libcurl

--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -171,7 +171,7 @@ endif
 
 
 ## --LGP 2024-03-17 - failing on github actions only
-# LIBCURL_CONFIGURE += --without-zlib
+LIBCURL_CONFIGURE += --without-zlib
 # LIBCURL_CONFIGURE += --without-ssl
 LIBCURL_CONFIGURE += --without-brotli
 LIBCURL_CONFIGURE += --without-zstd  
